static/css/style.css
body{
	height:100vh;
}
.logo {
	width: 25rem;
    max-width: 100vw;
    padding: 1.5rem;
}

.navbar {
	border-top: 2px solid #EAEAEA;
	border-bottom: 2px solid #EAEAEA;
	margin-bottom: 1rem;
}

.red {
    color: red;
}

.teal {
    color: teal;
}

.carousel-item-custom{
    padding-bottom: 5rem;
    padding-top: 5rem;
    background-color: gray;
}

a {
    //color: black;
}

.card {
    margin-bottom: 0.8rem;
}

.clickable-row {cursor: pointer;}

.content-list a{
    color: black;
    text-decoration: none;
}

.content-row{
    padding: .2rem 1rem;
    border-top: 1px solid gray;
}

.content-row:last-child{
    border-bottom: 1px solid gray;
}

.content-row:nth-child(odd){
    background-color: #FAFAFA;
}

.content-row:hover{
    background-color: AliceBlue;
}

.content-list{
    margin: 1rem 0rem;
}

.review-container{
    border-bottom: 1px solid Gainsboro;
}
.review-row{
    border-top: 1px solid Gainsboro;
}

